Fixed issue when error panel opened between the footer and the error panel there was a gap.

--- a/src/client/app/flogo.flows.detail.error-panel/components/error-panel.component.less
+++ b/src/client/app/flogo.flows.detail.error-panel/components/error-panel.component.less
@@ -23,10 +23,10 @@
 
 :host {
   position: fixed;
-  bottom: 70px;
+  bottom: 0;
   pointer-events: none;
-  width: 100%;
-  z-index: 2;
+  //width: 100%;
+  z-index: 1;
 }
 
 .layout {
@@ -86,10 +86,13 @@
   //display: none;
 }
 
+
+
 :host.is-open,
 :host.is-opening,
 :host.is-closing {
   height: 100%;
+  width: 100%;
 
   .layout__main {
     background-color: rgba(113, 113, 113, 0.75);
@@ -135,7 +138,7 @@
 
 .action-button {
   display: block;
-  margin-top: 5px;
+  margin-top: 0;
 }
 
 a:link {
