--- a/src/client/app/flogo.flows.detail/components/canvas.component.less
+++ b/src/client/app/flogo.flows.detail/components/canvas.component.less
@@ -15,7 +15,7 @@
 
 .footer-wrapper {
   width: 100%;
-  z-index: 1
+  //z-index: 1
 }
 
 .canvas-flow {
@@ -107,7 +107,7 @@
 }
 
 .flogo-flow-detail-menu-container:hover {
-  z-index: 20;
+  z-index: 2;
 }
 
 .flogo-flow-detail-log-button-container {
